# aaa

./: Makefile  README.md  a.sh  patch.diff
.github/workflows/: build.yml  coding_python.yml  coding_style.yml  scan.yml  test.yml
projects/bluetooth/bluetooth_applications/bt_accelerometer_bma400_i2c/: .cproject  .project  .projectlinkstore  README.md  bt_accelerometer_bma400_i2c.pintool  bt_accelerometer_bma400_i2c.slcp  bt_accelerometer_bma400_i2c.slps
projects/bluetooth/bluetooth_applications/bt_accelerometer_bma400_i2c/autogen/: gatt_db.c  gatt_db.h  gen.properties  linkerfile.icf  linkerfile.ld  sl_component_catalog.h  sl_event_handler.c  sl_power_manager_handler.c
projects/bluetooth/bluetooth_applications/bt_accelerometer_bma400_i2c/bt_accelerometer_bma400_i2c_cmake/: CMakeLists.txt  CMakePresets.json  bt_accelerometer_bma400_i2c.cmake
projects/bluetooth/bluetooth_applications/bt_accelerometer_bma400_i2c/bt_accelerometer_bma400_i2c_iar_cmake/: bt_accelerometer_bma400_i2c.cmake
projects/bluetooth/bluetooth_applications/bt_accelerometer_bma400_i2c/config/: mikroe_bma400_i2c_config.h  pin_config.h  sl_clock_manager_tree_config.h  sl_i2cspm_mikroe_config.h
projects/bluetooth/bluetooth_applications/bt_soc_blinky/: .cproject  .project  .projectlinkstore  app.c  app.h  app_bm.c  bt_soc_blinky.slcp  bt_soc_blinky.slpb  bt_soc_blinky.slps  readme.md  vscode.conf
projects/bluetooth/bluetooth_applications/bt_soc_blinky/autogen/: gatt_db.c  gatt_db.h  linkerfile.ld  sl_component_catalog.h  sl_event_handler.c  sl_power_manager_handler.c  sli_psa_config_autogen.h
projects/bluetooth/bluetooth_applications/bt_soc_blinky/bt_soc_blinky_cmake/: bt_soc_blinky.cmake
projects/bluetooth/bluetooth_applications/bt_soc_blinky/bt_soc_blinky_iar_cmake/: CMakeLists.txt  CMakePresets.json  bt_soc_blinky.cmake
projects/bluetooth/bluetooth_applications/bt_soc_blinky/config/: pin_config.h  sl_iostream_eusart_vcom_config.h  sl_simple_button_btn0_config.h  sl_simple_led_led0_config.h
projects/bluetooth/bluetooth_applications/bt_soc_empty/: bt_soc_empty.slcp  bt_soc_empty.slps  vscode.conf
projects/bluetooth/bluetooth_applications/bt_soc_empty/autogen/: gatt_db.c  gatt_db.h  sl_bluetooth.c  sl_component_catalog.h  sl_event_handler.c
projects/bluetooth/bluetooth_applications/bt_soc_empty/cmake_gcc/: CMakeLists.txt  bt_soc_empty.cmake  toolchain.cmake
projects/bluetooth/bluetooth_applications/bt_soc_empty/config/: pin_config.h  sl_rail_util_pti_config.h
scripts/: Makefile  build.py  pre_build.py
(+57 files in other folders)
